--- a/AlertController/Base.lproj/Main.storyboard
+++ b/AlertController/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.3333357871" green="0.33332890269999998" blue="0.33333355190000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="lU2-Dr-9ay" firstAttribute="centerY" secondItem="gJY-9N-Qge" secondAttribute="centerY" id="4Ff-9c-1gV"/>
                             <constraint firstItem="lU2-Dr-9ay" firstAttribute="leading" secondItem="JMV-g7-0Mu" secondAttribute="leading" constant="20" id="DOw-Dq-eCa"/>
